wrap fix #2

--- a/src/css/adaptive-tablet.css
+++ b/src/css/adaptive-tablet.css
@@ -11,7 +11,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: calc(24/18);
-    letter-spacing: -0.02em;
+    letter-spacing: -0.04em;
     color: #11111199;
 
     white-space: nowrap;
