--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,7 +24,7 @@ ul, li {
     font-size: 16px;
     font-weight: 400;
     line-height: calc(18/16);
-    letter-spacing: -0.02em;
+    letter-spacing: -0.04em;
     text-align: left;
     color:#11111199;
 
